<resources>
    <string name="app_name">PollIt</string>
    <string name="main_name">Poll It</string>
    <string name="main_icon">main_logo</string>
    <string name="check_button">Check Polls</string>
    <string name="create_button">Create a Poll</string>
    <string name="join_button">Join a Poll</string>
    <string name="check_poll">Check Polls</string>
    <string name="create_poll">Create a Poll</string>
    <string name="join_poll">Join a Poll</string>
    <string name="_login_">Log In</string>
    <string name="_create_account_">Create an account</string>
    <string name="_forgot_password_">Forgot password?</string>
    <string name="_email_id_">Email Id</string>
    <string name="_password_">Password</string>
    <string name="_username_">Username</string>
    <string name="_confirm_password_">Confirm Password</string>
    <string name="_send_reset_password_link_">Send  reset password link</string>
    <string name="_type_your_question_here_">Type your question here</string>
    <string name="_option_">Option</string>
    <string name="_enter_the_phrase_">Enter the phrase</string>
    <string name="_create_poll_">Create Poll</string>
    <string name="_join_poll_">Join Poll</string>
    <string name="_view_results_">Result</string>
    <string name="_resend_email_verification_">Resend email verification</string>
    <string name="_send_email_verification_">Send email verification</string>
    <string name="title_activity_check_poll_test">check_poll_test</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <!-- Strings related to login -->
</resources>
