<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_account">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/editText7"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/_email_id_"
                android:inputType="textEmailAddress"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/_username_"
                android:inputType="textPersonName"
                android:layout_centerInParent="true"
                android:layout_below="@id/editText7"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/editText9"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/_password_"
                android:inputType="textPassword"
                android:layout_centerInParent="true"
                android:layout_below="@id/editText8"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/editText10"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/_confirm_password_"
                android:inputType="textPassword"
                android:layout_centerInParent="true"
                android:layout_below="@id/editText9"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/button11"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="click_create_accnt"
                android:text="@string/_create_account_"
                android:layout_centerInParent="true"
                android:layout_below="@id/editText10"
                android:layout_marginTop="30dp"/>
        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>